# tccw-knowledge-doc-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker.sh  entry.py  main.tf  pyproject.toml
.github/workflows/: build.yml  docker-build-push.yml
infra/: build_and_push.sh  build_layer.sh  ecr.tf  ecs.tf  event-bridge.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  package.sh  secrets.tf  task_timeout_lambda.tf  variables.tf
infra/lambda/: lambda_function.py  launch_job.py  terminate_long_running_tasks.py
knowledge/: user_preference.txt
src/tccw_knowledge_doc_agent/: __init__.py  crew.py  main.py
tests/: fargate_test.py
