[project]
name = "tccw_knowledge_doc_agent"
version = "0.1.0"
description = "tccw-knowledge-doc-agent using crewAI"
requires-python = ">=3.11,<3.13"

authors = [{ name = "Nestor Colt", email = "nestor.colt@gmail.com" }]
dependencies = ["cognition-ai", "boto3"]

[project.scripts]
tccw_knowledge_doc_agent = "tccw_knowledge_doc_agent.main:run"
run_crew = "tccw_knowledge_doc_agent.main:run"
train = "tccw_knowledge_doc_agent.main:train"
replay = "tccw_knowledge_doc_agent.main:replay"
test = "tccw_knowledge_doc_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
